Fix images alignment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -582,11 +582,13 @@ body::before {
   }
 
   .section-img {
-    width: 100%;
+    width: 85%;
     max-height: 18rem;
+    margin: 2rem auto 0;
+    border-radius: 0.75rem;
   }
 
-  .section--img-right .section-img { order: 0; }
+  .section--img-right .section-img { order: 0; margin: 2rem auto 0; }
   .section--img-right .section-inner { order: 0; }
 
   .section:has(.section-img) .section-inner {
